[gd_scene load_steps=7 format=2]

[ext_resource path="res://BAHNSCHRIFT.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/MyTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/DialogBox.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_top = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 5.0
margin_right = 4.0
margin_bottom = 5.0
color = Color( 0.113725, 0.129412, 0.117647, 0.517647 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -120.0
margin_right = 170.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 10.0
margin_right = -12.0
margin_bottom = -10.0
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer"]
margin_left = 20.0
margin_top = 15.0
margin_right = 296.0
margin_bottom = 205.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Are you sure you want to remove this building? The material cost won't be refunded since it was built in a previous month."
fit_content_height = true

[node name="CancelButton" type="Polygon2D" parent="Panel/MarginContainer"]
position = Vector2( 80, 174.05 )
scale = Vector2( 0.35, 0.35 )
color = Color( 0.294118, 0.278431, 0.333333, 0 )
offset = Vector2( -65, -15 )
antialiased = true
polygon = PoolVector2Array( 45, 0, 0, 90, 240, 90, 285, 0 )

[node name="Label" type="Label" parent="Panel/MarginContainer/CancelButton"]
margin_left = -28.5714
margin_top = -14.4285
margin_right = 188.429
margin_bottom = 75.5715
mouse_filter = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.784314, 0.784314, 0.784314, 0.784314 )
custom_fonts/font = SubResource( 3 )
text = "Cancel"
align = 1
valign = 1

[node name="OkButton" type="Polygon2D" parent="Panel/MarginContainer"]
position = Vector2( 181, 174.05 )
scale = Vector2( 0.35, 0.35 )
color = Color( 0.8, 0.4, 1, 1 )
offset = Vector2( -65, -15 )
antialiased = true
polygon = PoolVector2Array( 45, 0, 0, 90, 320, 90, 365, 0 )

[node name="Label" type="Label" parent="Panel/MarginContainer/OkButton"]
margin_left = -45.7143
margin_top = -14.8148
margin_right = 284.286
margin_bottom = 75.1852
mouse_filter = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Yes, delete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="gui_input" from="Panel/MarginContainer/CancelButton/Label" to="." method="_on_CancelButton_Label_gui_input"]
[connection signal="gui_input" from="Panel/MarginContainer/OkButton/Label" to="." method="_on_OkButton_Label_gui_input"]
